2007-05-11  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* doc/allCommands.html:
	* doc/groupedCommands.html:
	* doc/header.html:
	* doc/style.css:
	* doc/fvwm/Makefile.am:
	* doc/modules/Makefile.am:
	* doc/modules/FvwmTabs.xml:
	* doc/modules/modules.html:
	* doc/images/fvwm.logo.png:
	* doc/images/m.logo.png:

	Number sections of HTML man page.
	Use HTML character entity &sdot; (&#8901;)
	Don't build separate sections of HTML man page (not being used ATM).
	Make logos transparent so looks neat with non-white backgrounds.
	Template FvwmTabs.xml file for man page.

2007-04-27  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* fvwm/windowlist.c (CMD_WindowList):
	* NEWS:

	Deprecated "UseListSkip" & "OnlyListSkip" - replaced with
	"UseSkipList" & "OnlySkipList".

2007-04-29  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* NEWS:
	* fvwm/add_window.c (validate_transientfor):
	detect and disallow circular transient-for hints

2007-04-27  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* fvwm/fvwm.1.in:
	* doc/commands/WindowList.xml:

	s/UseListSkip/UseSkipList/g etc.

2007-04-17  Jesus Guerrero  <6thpink(at)terra(dot)es>

	* fvwm/menus.c (size_menu_vertically):
	* doc/fvwm/menus.xml (menu_anatomy):
	added localization of the "More&..." string

2007-03-17  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* libs/PictureBase.c (PictureFindImageFile):
	fix for segfault with svg-support enabled

	* INSTALL.fvwm (http):
	* configure.ac (png_CFLAGS):
	raise librsvg dependeny due to bug with 2.13.91

	* fvwm/cursor.c (CMD_CursorStyle):
	remove unused static variable nocursor

2007-03-14  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* doc/fvwm-man.xsl:
	bugfix: backslashes were not being escaped properly.

	* doc/fvwm/options.xml:
	minor formatting error.

	* AUTHORS:
	typo.

2007-03-11  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* doc/Makefile.am:
	* doc/fvwm/Makefile.am:
	* doc/commands/Makefile.am:
	* doc/modules/Makefile.am:
	* doc/README:
	* configure.ac:
